webdash/index.scss
@use "sass:math";

$np-height: 125px;
$up-height: 75px;
$icon-ar: math.div(4,3);

.nowplaying {
    display: flex;
    justify-content: center;
    height: $np-height;
    max-height: $np-height;
}

.nowplaying .songicon {
    height: 100%;
    flex-shrink: 1;
    width: auto;
}

.songicon-overlay {
    background-color: black;
    height: 100%;
    opacity: 0;

    transition: .2s ease;

    &:hover {
        opacity: 50%;
    }
}

.songoverflow {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
}

.fullheight {
    height: 100vh;
}

.songlist {
    height: 100%;
    overflow-y: auto;
}

.tabview {
    display: flex;
    height: 100%;
    flex-direction: column;
}

.controlicon {
    cursor: pointer;

    & {
        will-change: filter;
        transition: .2s ease-out;
    }

    &:hover {
        filter: drop-shadow(0 0 5px #fff);
    }
}

.errornotif {
    opacity: 90%;
    position: fixed !important;
    z-index: 9999999;
    bottom: 10px;
    right: 10px;
}

